Issue 151 - Hero-horiz-tabs scrollbar on mobile (#376)
* added wrap to nav buttons

* made section styles work with tabs

---------

--- a/blocks/hero-horizontal-tabs/hero-horizontal-tabs.css
+++ b/blocks/hero-horizontal-tabs/hero-horizontal-tabs.css
@@ -126,6 +126,7 @@ main .hero-horizontal-tabs nav ul {
   display: flex;
   align-items: flex-end;
   text-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 main .hero-horizontal-tabs nav ul li {
