--- a/styles/styles.css
+++ b/styles/styles.css
@@ -581,7 +581,8 @@ main .section.bold-headings h6 {
 }
 
 /* section - full-width */
-main .section.full-width > .section-container {
+main .section.full-width > .section-container,
+main .section.full-width > .tab-item.active > .section-container {
   max-width: 100%;
   padding-left: 0;
   padding-right: 0;
@@ -614,7 +615,9 @@ main .section.brands-top p {
   letter-spacing: 0.1px;
 }
 
-main .section.brands-top > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.brands-top > .section-container,
+main .section.brands-top > .tab-item.active > .section-container {
   padding: 0 1rem;
 }
 
@@ -624,6 +627,7 @@ main .section.social-media {
   background-color: var(--transparent-blue-light-color);
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 main .section.social-media .section-container {
   padding: 0 1rem;
 }
@@ -767,7 +771,9 @@ main .section.spaced li {
   line-height: 1;
 }
 
-main .section.spaced > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.spaced > .section-container,
+main .section.spaced > .tab-item.active > .section-container {
   max-width: 100%;
   padding: 0;
 }
@@ -783,7 +789,9 @@ main .section.contacts-and-links h3 {
 }
 
 /* section - contact-us */
-main .section.contact-us > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.contact-us > .section-container,
+main .section.contact-us > .tab-item.active > .section-container {
   padding: 5rem 1rem;
   background-color: var(--transparent-blue-light-color);
   text-align: center;
@@ -803,7 +811,9 @@ main .section.contact-us .button-container a:hover {
 }
 
 /* section - about-us */
-main .section.about-us > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.about-us > .section-container,
+main .section.about-us > .tab-item.active > .section-container {
   text-align: center;
 }
 
@@ -824,7 +834,9 @@ main .section.small-narrow {
   margin-top: 3rem;
 }
 
-main .section.small-narrow > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.small-narrow > .section-container,
+main .section.small-narrow > .tab-item.active > .section-container {
   padding: 0 1rem;
 }
 
@@ -837,14 +849,18 @@ main .section.small-narrow h5 {
 }
 
 /* section - narrow */
-main .section.narrow > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.narrow > .section-container,
+main .section.narrow > .tab-item.active > .section-container {
   padding: 0 1rem;
   margin: auto;
   max-width: 42rem;
 }
 
 /* section - narrower */
-main .section.narrower > .section-container{
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.narrower > .section-container,
+main .section.narrower > .tab-item.active > .section-container {
   padding: 0 1rem;
   margin: auto;
   margin-block-end: 3rem;
@@ -856,7 +872,9 @@ main .section.static {
   margin-bottom: 7.5rem;
 }
 
-main .section.static > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.static > .section-container,
+main .section.static > .tab-item.active > .section-container {
   padding: 0 1rem 2rem;
   margin-bottom: 5rem;
 }
@@ -958,12 +976,16 @@ main .section.bg-primary p {
 }
 
 /* section - padded */
-main .section.padded > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.padded > .section-container,
+main .section.padded > .tab-item.active > .section-container {
   padding: 2rem 1rem;
   box-sizing: border-box;
 }
 
-main .section.padded-inline > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+main .section.padded-inline > .section-container,
+main .section.padded-inline > .tab-item.active > .section-container {
   padding-inline: 1rem;
   box-sizing: border-box;
 }
@@ -993,7 +1015,8 @@ main .block.centered > div {
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
-.section.with-background-image > .section-container {
+.section.with-background-image > .section-container,
+.section.with-background-image > .tab-item.active > .section-container {
   display: block;
   position: absolute;
   top: 0;
@@ -1001,7 +1024,9 @@ main .block.centered > div {
   width: 100%;
 }
 
-.section.with-background-image.align-right > .section-container {
+/* stylelint-disable-next-line no-descending-specificity */
+.section.with-background-image.align-right > .section-container,
+.section.with-background-image.align-right > .tab-item.active > .section-container {
   right: 0;
   left: unset;
 }
@@ -1121,7 +1146,9 @@ main .section.auto-top-spacing .section-container {
   }
 
   /* section - narrow */
-  main .section.narrow > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.narrow > .section-container,
+  main .section.narrow > .tab-item.active > .section-container {
     position: relative;
     width: 100%;
     padding-right: 0;
@@ -1132,7 +1159,9 @@ main .section.auto-top-spacing .section-container {
   }
 
   /* section - narrower */
-  main .section.narrower > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.narrower > .section-container,
+  main .section.narrower > .tab-item.active > .section-container {
     position: relative;
     width: 100%;
     padding-right: 0;
@@ -1149,7 +1178,9 @@ main .section.auto-top-spacing .section-container {
   }
 
   /* section - contact-us */
-  main .section.contact-us > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.contact-us > .section-container,
+  main .section.contact-us > .tab-item.active > .section-container {
     padding: 5rem 0;
   }
 
@@ -1212,6 +1243,7 @@ main .section.auto-top-spacing .section-container {
     padding: 5rem 0;
   }
 
+  /* stylelint-disable-next-line no-descending-specificity */
   main .section.social-media .section-container {
     display: flex;
   }
@@ -1247,17 +1279,23 @@ main .section.auto-top-spacing .section-container {
     min-height: unset;
   }
 
-  main .section.spaced > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.spaced > .section-container,
+  main .section.spaced > .tab-item.active > .section-container {
     padding: 0 1rem;
   }
 
   /* section - padded */
-  main .section.padded > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.padded > .section-container,
+  main .section.padded > .tab-item.active > .section-container {
     padding: 2rem;
   }
 
   /* section - padded-inline - not applied for wide screens */
-  main .section.padded-inline > .section-container {
+  /* stylelint-disable-next-line no-descending-specificity */
+  main .section.padded-inline > .section-container,
+  main .section.padded-inline > .tab-item.active > .section-container {
     padding-inline: 0;
   }
 
